# Projeto-GREMLINS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config
include/: SLPool.hpp  StoragePool.hpp  mempool_common.h
src/: test_data_integrity.cpp  test_list_integrity.cpp
